# DeepNN

./: .gitignore
conv-net-version-3/: CMakeLists.txt  conv
single-layer-convnet/: CMakeLists.txt  ConvNet.cpp
